# E3SM

./: .gitmodules
cime_config/: tests.py
cime_config/allactive/: config_pesall.xml
cime_config/machines/: config_machines.xml
components/eamxx/: CMakeLists.txt
components/eamxx/cime_config/: namelist_defaults_eamxx.xml
components/eamxx/cime_config/testdefs/testmods_dirs/eamxx/tchem_atm/uci/: shell_commands
components/eamxx/src/control/: atmosphere_driver.cpp
components/eamxx/src/mct_coupling/: CMakeLists.txt
components/eamxx/src/physics/: CMakeLists.txt  register_physics.hpp
components/eamxx/src/physics/mam/: CMakeLists.txt  eamxx_mam_aci_process_interface.cpp  eamxx_mam_aci_process_interface.hpp  eamxx_mam_constituent_fluxes_interface.cpp  eamxx_mam_dry_deposition_process_interface.cpp  eamxx_mam_generic_process_interface.cpp  eamxx_mam_generic_process_interface.hpp  eamxx_mam_interpolation_microphysics_process_interface.cpp  eamxx_mam_interpolation_microphysics_process_interface.hpp  eamxx_mam_microphysics_process_functions.cpp  eamxx_mam_microphysics_process_interface.cpp  eamxx_mam_microphysics_process_interface.hpp  eamxx_mam_optics_process_interface.cpp  eamxx_mam_srf_and_online_emissions_process_interface.cpp  eamxx_mam_wetscav_process_interface.cpp  eamxx_mam_wetscav_process_interface.hpp  helper_hash.cpp  mam_coupling.hpp
components/eamxx/src/physics/mam/readfiles/: photo_table_utils.cpp  tracer_reader_utils.hpp  vertical_remapper_mam4.cpp  vertical_remapper_mam4.hpp
components/eamxx/src/physics/tchem-atm/: CMakeLists.txt  eamxx_tchem_atm_process_interface.cpp  eamxx_tchem_atm_process_interface.hpp  eamxx_tchem_atm_tchem_functions.cpp  eamxx_tchem_atm_tchem_functions.hpp
components/eamxx/src/share/: CMakeLists.txt
components/eamxx/src/share/util/: eamxx_data_interpolation.cpp  eamxx_data_interpolation.hpp
components/eamxx/tests/single-process/: CMakeLists.txt
components/eamxx/tests/single-process/mam/aero_microphys/: CMakeLists.txt
components/eamxx/tests/single-process/mam/interpolation_aero_microphys/: output.yaml
components/eamxx/tests/single-process/tchem-atm/: CMakeLists.txt  compute_mw.py  gen_initial_conditions.py  input.all.yaml  input.yaml
components/mosart/src/cpl/: rof_comp_mct.F90
